# darknet-people-detector

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
include/: firmatacpp_export.h  firmbase.h  firmi2c.h
